@@ -665,6 +665,7 @@ class MathStructure {
 		int merge_bitwise_xor(MathStructure &mstruct, const EvaluationOptions &eo, MathStructure *mparent = NULL, size_t index_this = 1, size_t index_that = 2, bool reversed = false);
 		bool calculatesub(const EvaluationOptions &eo, const EvaluationOptions &feo, bool recursive = true, MathStructure *mparent = NULL, size_t index_this = 1);
 		void evalSort(bool recursive = false);
+		bool integerFactorize();
 		//@}
 
 		/** @name Functions for protection from changes when evaluating */
